gcc/testsuite/rust/rustc/ui/error-codes/E0084.rs
#[repr(i32)] // { dg-error ".E0084." "" { target *-*-* } }
enum Foo {}

fn main() {
}

